binding and moving to separate modules

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
 <script type="text/javascript" src="./lib/angular.min.js"></script>
 <script type="text/javascript" src="./scripts/app.js"></script>
+<script type="text/javascript" src="./scripts/tasks.js"></script>
+<script type="text/javascript" src="./scripts/tags.js"></script>
 <link href="./styles/bootstrap.min.css" rel="stylesheet"/>
 <link href="./styles/app.css" rel="stylesheet"/>
 </head>
@@ -10,21 +12,21 @@
   <div class="top-bar">
     <h4>ToDo Box</h4>
   </div>
-  <div class="content container-fluid" ng-controller="TaskController as tCtrl">
+  <div class="content container-fluid">
     <div class="row">
       <div class="col-lg-5 col-md-4 col-sm-4">
-         <ul class="list-group"> 
-          <li class="list-group-item tdb-tag" ng-class="{active:tCtrl.isActiveTag('')}" ng-click="tCtrl.setActiveTag('')">
+         <ul class="list-group" ng-controller="TagController as tagCtrl"> 
+          <li class="list-group-item tdb-tag" ng-class="{active:tagCtrl.isActiveTag('')}" ng-click="tagCtrl.setActiveTag('')">
             <h5 class="list-group-item-header">All tasks</h5>
           </li>
-          <li class="list-group-item tdb-tag" ng-class="{active:tCtrl.isActiveTag(tag)}" ng-repeat="tag in tCtrl.tags" ng-click="tCtrl.setActiveTag(tag)">
+          <li class="list-group-item tdb-tag" ng-class="{active:tagCtrl.isActiveTag(tag)}" ng-repeat="tag in tagCtrl.tags" ng-click="tagCtrl.setActiveTag(tag)">
             <h5 class="list-group-item-header">{{tag}}</h5>
           </li>
         </ul>
       </div>
       <div class="col-lg-7 col-md-8 col-sm-8">
-        <ul class="list-group">
-          <li class="list-group-item tdb-box tdb-box-blue" ng-repeat="task in tCtrl.tasks" ng-show="tCtrl.hasTag(task)">
+        <ul class="list-group" ng-controller="TaskController as taskCtrl">
+          <li class="list-group-item tdb-box tdb-box-blue" ng-repeat="task in tasks" ng-show="taskCtrl.hasTag(task)">
             <div ng-repeat="tag in task.tags">
               <div class="tdb-tag">{{tag}}</div>
             </div>
