added github logo

--- a/index.html
+++ b/index.html
@@ -64,5 +64,6 @@
     </div>
   </div>
  
+<div class="gitlogo" onclick="window.open('https://github.com/vicentiubacioiu/todobox')"></div>
 </body>
 </html>
