separated CSS and used multiple colors and SASS

--- a/index.html
+++ b/index.html
@@ -7,9 +7,14 @@
     <script type="text/javascript" src="./scripts/tasks.js"></script>
     <script type="text/javascript" src="./scripts/tasks-factory.js"></script>
     <script type="text/javascript" src="./scripts/tags.js"></script>
+    <script type="text/javascript" src="./scripts/tags-factory.js"></script>
     <script type="text/javascript" src="./scripts/app.js"></script>
     <link href="./styles/bootstrap.min.css" rel="stylesheet"/>
+    <link href="./styles/tasks.css" rel="stylesheet"/>
+    <link href="./styles/tags.css" rel="stylesheet"/>
     <link href="./styles/app.css" rel="stylesheet"/>
+    <link href="./styles/colors.css" rel="stylesheet"/>
+    <link href="./styles/animations.css" rel="stylesheet"/>
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body ng-controller="AppController as appCtrl">
