--- a/index.html
+++ b/index.html
@@ -3,13 +3,20 @@
   <head>
     <script type="text/javascript" src="./lib/jquery.min.js"></script>
     <script type="text/javascript" src="./lib/angular.min.js"></script>
+    <script type="text/javascript" src="./lib/angular-touch.min.js"></script>
+    <script type="text/javascript" src="./lib/jquery-ui.min.js"></script>
+    <script type="text/javascript" src="./lib/jquery-ui-touch.min.js"></script>
     <script type="text/javascript" src="./scripts/storage.js"></script>
     <script type="text/javascript" src="./scripts/tasks.js"></script>
+    <script type="text/javascript" src="./scripts/directives/tasks-dir.js"></script>
     <script type="text/javascript" src="./scripts/tasks-factory.js"></script>
     <script type="text/javascript" src="./scripts/tags.js"></script>
+    <script type="text/javascript" src="./scripts/directives/tags-dir.js"></script>
     <script type="text/javascript" src="./scripts/tags-factory.js"></script>
     <script type="text/javascript" src="./scripts/app.js"></script>
+    <script type="text/javascript" src="./scripts/directives/app-dir.js"></script>
     <link href="./styles/bootstrap.min.css" rel="stylesheet"/>
+    <link href="./styles/jquery-ui.min.css" rel="stylesheet"/>
     <link href="./styles/tasks.css" rel="stylesheet"/>
     <link href="./styles/tags.css" rel="stylesheet"/>
     <link href="./styles/app.css" rel="stylesheet"/>
